update .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,28 @@
-target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
-
-### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
-*.iws
+# IntelliJ IDEA files
+.idea/
 *.iml
-*.ipr
 
-### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
+# Compiled class file
+target/
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
+# Logs
+*.log
+
+# Maven and Gradle files
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+/.mvn/wrapper/maven-wrapper.jar
+/.gradle/
+gradle/
 build/
-!**/src/main/**/build/
-!**/src/test/**/build/
+out/
+*.jar
 
-### VS Code ###
-.vscode/
-
-### Mac OS ###
+# Other system files
 .DS_Store
+Thumbs.db
